# TTS-Discord-Bot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.py  pyproject.toml  requirements.txt  run.py  start.bat
.github/: dependabot.yml
.github/workflows/: releaser.yaml
bot/: bot.py  event_handlers.py  tts_handler.py  user_settings.py
bot/api/: async_tts_handler.py  gemini_api.py  gemini_chat_history.py  tts_handler.py
bot/client/: base_cog.py
bot/commands/: general.py  llm_commands.py  set_game_id.py  tts_commands.py  voice_commands.py  voice_manager.py
bot/events/: auto_leave.py  message_listener.py  on_ready.py  voice_chat_text_channel_listener.py  voice_events.py
bot/message_command/: analyze_material.py  play_tts.py
bot/utils/: audio_queue.py  extract_user_nickname.py
data/: .gitignore  game_id_to_user_id.json  sample_data.json  user_settings.json  user_voice.json
models/: audio_buffer.py
tests/: test_async_tts_handler.py  test_audio_queue.py  test_bot_utils.py  test_gemini_api.py  test_gemini_chat_history.py  test_user_settings.py  test_utils.py
utils/: api_utils.py  file_utils.py  logger.py
