[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts-discord-bot"
version = "0.1.0"
description = "A Discord bot with TTS functionality"
authors = [
    {name = "whats2000"},
    {name = "shane0411"},
]
dependencies = [
    "python-dotenv",
    "pandas",
    "google-genai",
    "disnake==2.11.0",
    "pillow==10.4.0",
    "protobuf==3.20.3",
    "pydub==0.25.1",
    "PyNaCl==1.5.0",
    "requests==2.32.3",
]
requires-python = ">=3.9, <3.13"

[tool.setuptools]
packages = ["bot"]

[dependency-groups]
dev = []
